[package]
name = "cowabunga"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "cowabunga.exe"
LegalCopyright = "Copyright © sowwyitsanalt 2022"
ProductName = "COWABUNGA"
ProductVersion = "0.5.0.0"
FileDescription = "COWABUNGA"